# surface-maps-via-adaptive-triangulations

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  grsi-install.sh  grsi-run.sh  grsi.txt
apps/adaptive_triangulations/: approximation.cc  coarse_to_fine.cc  curvature_based_sizing.cc  initialization_hands.cc  n_meshes.cc  resolution_T.cc  user_sizing.cc
data/fields/302_314/: field_302_A  field_314_B
data/landmarks/shrec_plane_bird/: 248.pinned  61.pinned
data/landmarks/shrec_user_sizing/: 302.vts  314.vts
data/meshes/hand/: hand_plain.pinned  hand_vulcan_0.pinned  hand_vulcan_1.pinned  hand_vulcan_3.pinned  hand_vulcan_5.pinned  hand_vulcan_7.pinned  hand_vulcan_8.pinned
data/meshes/shrec/: 161.off  248.off  302.off  314.off  381.off  381.vts  382.off  382.vts  383.off  383.vts  384.off  384.vts  385.off  385.vts  386.off  387.off  387.vts  388.off  388.vts  389.off  389.vts  390.off  391.off  391.vts  392.off  392.vts  393.off  393.vts  394.off  394.vts  395.off  395.vts  396.off  396.vts  397.off  397.vts  398.off  398.vts  399.off  399.vts  (+6 more)
data/meshes/spot/: spot_shrec07.pinned
data/meshes/yang2020/cat_horse/: landmarks0.txt  landmarks1.txt
data/meshes/yang2020/rabbit12-15/: landmarks0.txt  landmarks1.txt
libs/ACG_BSP/ACG_BSP/Config/: ACGDefines.hh
libs/ACG_BSP/ACG_BSP/Math/: VectorT.hh  (+5 more)
libs/predicates/: ExactPredicates.h
src/SurfaceMaps/: Init.cc  Init.hh  Types.hh
src/SurfaceMaps/AdaptiveTriangulations/: AdaptiveTargetEdgeLength.cc  AdaptiveTargetEdgeLength.hh  AdaptiveTriangulationsSettings.hh  AssignVerticesToFaces.cc  AssignVerticesToFaces.hh  DistortionHeatmap.cc  DistortionHeatmap.hh  EvaluationMetrics.cc  EvaluationMetrics.hh  GuaranteeSurfaceApproximation.cc  GuaranteeSurfaceApproximation.hh  Helpers.cc  Helpers.hh  InitSphereEmbeddings.cc  InitSphereEmbeddings.hh  LiftToSurface.cc  LiftToSurface.hh  MapState.cc  MapState.hh  OptimizeCoarseToFine.cc  OptimizeCoarseToFine.hh  OptimizeMap.cc  OptimizeMap.hh  OptimizeMapEnergies.cc  OptimizeMapEnergies.hh  OptimizeSphereEmbedding.cc  OptimizeSphereEmbedding.hh  OptimizeVertex.cc  OptimizeVertex.hh  OptimizeWithRemeshing.cc  OptimizeWithRemeshing.hh  Remeshing.cc  Remeshing.hh  TextureTransfer.cc  TextureTransfer.hh  Visualization.cc  Visualization.hh  VisualizationDraw.cc  VisualizationDraw.hh  WeightPainter.cc  (+1 more)
src/SurfaceMaps/Misc/: ConstantCurvatureEmbedding.cc  ConstantCurvatureEmbedding.hh  ConstantCurvatureGeometry.cc  ConstantCurvatureGeometry.hh  Diffusion.cc  Diffusion.hh  DistortionEnergy.cc  DistortionEnergy.hh  PrimalPath.cc  PrimalPath.hh  SphereEmbeddingTet.cc  SphereEmbeddingTet.hh
src/SurfaceMaps/MultiRes/: MultiResSphereEmbedding.cc  MultiResSphereEmbedding.hh  MultiResSphereEmbeddingSettings.hh  ProgressiveMesh.cc  ProgressiveMesh.hh  VertexOptimization.cc  VertexOptimization.hh
src/SurfaceMaps/Utils/: AnsiColorCodes.hh  BSPTree.cc  BSPTree.hh  BarycentricPoint.hh  Dijkstra.cc  Dijkstra.hh  ExternalProperty.hh  Filesystem.hh  GarbageCollection.hh  GarbageCollectionImpl.hh  Genus.cc  Genus.hh  Geometries.cc  Geometries.hh  Helpers.cc  Helpers.hh  IO.cc  IO.hh  LocalCoordinateSystem.hh  MeshNormalization.cc  MeshNormalization.hh  Out.hh  Parametrization.cc  Parametrization.hh  PrincipalCurvature.cc  PrincipalCurvature.hh  RefinementMap.hh  StackTrace.cc  StackTrace.hh  Subdivision.cc  Subdivision.hh  Video.cc  Video.hh
src/SurfaceMaps/Viewer/: ColorGenerator.cc  ColorGenerator.hh  Colors.hh  ConstantCurvature.cc  ConstantCurvature.hh  GlowDraw.cc  GlowDraw.hh  HeatmapColors.cc  HeatmapColors.hh  IDraw.hh  LandmarkEditor.cc  LandmarkEditor.hh  MeshView.cc  MeshView.hh  Picking.cc  Picking.hh
(+13 files in other folders)
